--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>vaadin-maven-plugin</artifactId>
             <version>24.7.0</version>
         </dependency>
+        <!-- EXIF Metadata Extractor -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
