--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,15 +10,21 @@ spring:
     driver-class-name: org.postgresql.Driver
   main:
     allow-bean-definition-overriding: true
-
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 50MB
+      max-request-size: 50MB
   profiles:
     active: local
-
   jpa:
     hibernate:
       ddl-auto: validate
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  mvc:
+    async:
+      request-timeout: 300000
 
 vaadin:
   pwa:
@@ -32,3 +38,6 @@ jwt:
 server:
   port: 8080
   address: 0.0.0.0  # Permite acceso desde otros dispositivos en la red
+  connection-timeout: 300000
+  tomcat:
+    max-swallow-size: 50MB
