--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,9 @@ logging:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/safebike
-    username: juant
-    password: loki2019
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
     driver-class-name: org.postgresql.Driver
   main:
     allow-bean-definition-overriding: true
